@@ -19,9 +19,7 @@
           <table width="99%" cellpadding="0" cellspacing="0"
           border="0">
             <tr>
-              <td valign="top" bgcolor="#006666"><img src= 
-              "http://images.slashdot.org/slc.gif" width="13"
-              height="16" alt="" align="center"><font size="4" color= 
+              <td valign="top" bgcolor="#006666"><font size="4" color= 
               "#FFFFFF" face="arial,helvetica"><b>Evidence for a
               Flat Universe?</b></font></td>
             </tr>
@@ -66,9 +64,7 @@
           <table width="99%" cellpadding="0" cellspacing="0"
           border="0">
             <tr>
-              <td valign="top" bgcolor="#006666"><img src= 
-              "http://images.slashdot.org/slc.gif" width="13"
-              height="16" alt="" align="top"><font size="4" color= 
+              <td valign="top" bgcolor="#006666"><font size="4" color= 
               "#FFFFFF" face="arial,helvetica"><b>Review:Toy Story
               2</b></font></td>
             </tr>
