@@ -1,34 +1,10 @@
 <html>
   <body>
-    <table border="1">
-      <tr>
-        <td valign="top" align="left">
-          <img src="blabla" width="52" height="52" border="0" align="right">
-           As I'm sure many of you know I'm a big Computer
-          Animation nut. And when pixar dusts off the gloves and
-          releases a movie, I really have no option but to be there
-          opening night. This time it proved to be very worth
-          skipping out a half hour early to catch one of the best
-          movies of the year. Click below to read the
-          review. 
+          <img src="blabla" width="52" height="52" border="1" align="right">
+          <img src="topicint" width="51" height="51" border="1" align="right">
 
-          <hr>
-
-          <img src="topicint" width="51" height="51" border="0" align="right">
-          "Since the day the Internet became popular and the good
-          old BBS's faded into the back ground, I myself have had a
-          hard time finding the same kind of active community. Sure
-          there&rsquo;s Slashdot, BugTraq, and IRC, but for
-          whatever reason it seems people remain private and keep
-          to themselves without a <b>who's online</b> option, and a
-          message feature. I do see other Slashdot members posting
-          often, but there are allot more people that read the
-          articles and have opinions that remain in the background.
-          I guess my question is if anyone has found the same kind
-          of thing as the old BBS's?"
-        </td>
-      </tr>
-    </table>
+	  Just some text here
   </body>
 </html>
+
 
